--- a/recipes/rendang.html
+++ b/recipes/rendang.html
@@ -6,5 +6,38 @@
 </head>
 <body>
     <h1>Rendang Recipes</h1>
+    <img src="../images/rendang.jpg" alt="Images of finished rendang">
+    <h3>Chef John's Beef Rendang</h3>
+    <p>The sauce in this amazing Indonesian curry might be invisible, but you'll know it's there. As it reduces, the water evaporates</p>
+    <p>leaving behind the fat and flavor that make this dish so unique and addictive. Originally, cooking meat this way helped preserve it in hot and humid Indonesia. </p>
+    <h4>Ingredients</h4>
+    <ul>
+        <li>2½ pounds beef chuck</li>
+        <li>4 shallots, sliced </li>
+        <li>6 cloves garlic</li>
+        <li>1 (1 1/2 inch) piece ginger, peeled and sliced</li>
+        <li>1½ inch piece galangal, peeled and sliced</li>
+        <li>2 serrano chile peppers - stemmed, seeded, and sliced</li>
+        <li>1 Fresno chile pepper - stemmed, seeded, and sliced</li>
+        <li>1 tablespoon Korean red pepper flakes</li>
+        <li>1 teaspoon ground coriander</li>
+        <li>½ teaspoon ground turmeric </li>
+        <li>⅛ teaspoon ground cardamom</li>
+        <li>⅛ teaspoon freshly grated nutmeg</li>
+        <li>2 tablespoons vegetable oil </li>
+        <li>1 (14 ounce) can full-fat coconut milk </li>
+        <li>2 teaspoons tamarind paste </li>
+        <li>1 tablespoon brown sugar </li>
+        <li>½ stalk lemongrass, light part </li>
+    </ul>
+    <h4>Steps</h4>
+    <ol>
+        <li>Cut beef chuck into 2-inch pieces.</li>
+        <li>Combine shallots, garlic, ginger, galangal, serrano and Fresno chiles, salt, red pepper flakes, coriander, turmeric, cardamom, and nutmeg in the bowl of a food processor. Pulse until paste is very finely ground, stopping occasionally to scrape down the sides with a spatula.</li>
+        <li>Heat oil in a pan over medium heat. Add the curry paste. Cook and stir until it starts to dry out, then stir in the beef. Add coconut milk, tamarind paste, and brown sugar. Stir to combine. Fill up the empty can of coconut milk with water and pour it into the pan. Increase heat to medium-high; bring to a simmer.</li>
+        <li>In the meantime, bruise lemongrass with the back of your knife. Cut into 1- to 2-inch pieces and add to the curry. Reduce heat to medium. Cook, uncovered, stirring occasionally, until beef is fork-tender and sauce is fully reduced, about 4 hours. Stir more frequently as water reduces; add more water or lower the heat if sauce is reducing faster than beef is softening.</li>
+        <li>Remove lemongrass to serve. For best results, let cool and serve the next day.</li>
+    </ol>
+    <a href="../index.html"><strong>Back to menu</strong></a>
 </body>
 </html>
