--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/rendang.html">Rendang Recipes</a>
+    <ul>
+        <li><a href="./recipes/rendang.html">Rendang Recipes</a></li>
+        <li><a href="./recipes/cold-brew.html">Cold Brew Coffee Recipes</a></li>
+        <li><a href="./recipes/banana_bread.html">Banana Bread Recipes</a></li>
+    </ul>
 </body>
 </html>
